--- a/cubo.html
+++ b/cubo.html
@@ -20,6 +20,7 @@
         <button id="zButton">Rotar Z</button>
         <button id="pButton">Pausa/Rotar</button>
     </div>
+    <input type="file" id="fileInput" accept="image/*">
     
     <script src="cubo.js"></script>
 </body>
