--- a/cubo.html
+++ b/cubo.html
@@ -19,6 +19,21 @@
         <button id="yButton">Rotar Y</button>
         <button id="zButton">Rotar Z</button>
         <button id="pButton">Pausa/Rotar</button>
+        <!-- Botón de color con lista desplegable -->
+        <div class="dropdown">
+            <button id="colorButton" class="dropbtn">Seleccionar Color</button>
+            <div id="colorDropdown" style="display: none;">
+                <select id="colorList">
+                    <option value="rojo">Rojo</option>
+                    <option value="verde">Verde</option>
+                    <option value="azul">Azul</option>
+                    <option value="amarillo">Amarillo</option>
+                    <option value="magenta">Magenta</option>
+                    <option value="cian">Cian</option>
+                </select>
+            </div>
+        </div>
+        
     </div>
     <input type="file" id="fileInput" accept="image/*">
     
