numeracion de caras

--- a/cubo.html
+++ b/cubo.html
@@ -31,6 +31,8 @@
                     <option value="magenta">Magenta</option>
                     <option value="cian">Cian</option>
                 </select>
+                 <!-- Nuevo botón para seleccionar imagen -->
+        <button id="imageButton" style="display: none;">Seleccionar Imagen</button>
             </div>
         </div>
         
