intento de cubo

--- a/cubo.html
+++ b/cubo.html
@@ -2,12 +2,15 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cubo 3D</title>
     <link rel="stylesheet" href="botones.css">
     <script src="libs/macWebglUtils.js"></script>
     <script src="libs/MVnew.js"></script>
     <script src="opencv.js"></script>
+    <!-- <script async src="opencv.js" onload="onOpenCvReady();" crossorigin="anonymous"></script> -->
+
 </head>
 <body>
     <h1>Cubo con videos</h1>
