--- a/cubo.html
+++ b/cubo.html
@@ -20,6 +20,7 @@
         <button id="yButton">Rotar Y</button>
         <button id="zButton">Rotar Z</button>
         <button id="pButton">Pausa/Rotar</button>
+        <button id="playButton">Play</button>
 
         <div class="dropdown">
             <button id="colorButton" class="dropbtn">Seleccionar Color</button>
@@ -42,9 +43,8 @@
 
     <video id="video" autoplay controls style="display:none" autoplay muted playsinline>
         Tu navegador no soporta la etiqueta de video.
-    </video>
+    </video> 
     
-
     <script src="cubo.js"></script>
 </body>
 </html>
