--- a/cubo.html
+++ b/cubo.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="botones.css">
     <script src="libs/macWebglUtils.js"></script>
     <script src="libs/MVnew.js"></script>
-    <script src="opencv.js"></script>
-    <!-- <script async src="opencv.js" onload="onOpenCvReady();" crossorigin="anonymous"></script> -->
-
+    <!-- <script src="opencv.js"></script> -->
+    <script async src="opencv.js" onload="onOpenCvReady();" type="text/javascript"></script>
 </head>
 <body>
     <h1>Cubo con videos</h1>
@@ -20,6 +19,8 @@
         <button id="yButton">Rotar Y</button>
         <button id="zButton">Rotar Z</button>
         <button id="pButton">Pausa/Rotar</button>
+        <button id="playButton">Play</button>
+
 
         <div class="dropdown">
             <button id="colorButton" class="dropbtn">Seleccionar Color</button>
