--- a/cubo.html
+++ b/cubo.html
@@ -10,6 +10,9 @@
     <script src="libs/MVnew.js"></script>
     <!-- <script src="opencv.js"></script> -->
     <script async src="opencv.js" onload="onOpenCvReady();" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+
+
 </head>
 <body>
     <h1>Cubo con videos</h1>
@@ -34,7 +37,7 @@
                     <option value="cian">Cian</option>
                 </select>
                 <button id="videoButton">Seleccionar Video</button>
-                <input type="file" id="videoInput" accept="video/*" style="display:none;">
+                <input type="file" id="videoInput" accept="video/*" style="display:none;"onchange="handleFileSelect(event)">
             </div>
         </div>
     </div>
