videos no carregados

--- a/cubo.html
+++ b/cubo.html
@@ -9,7 +9,7 @@
     <script src="libs/macWebglUtils.js"></script>
     <script src="libs/MVnew.js"></script>
     <!-- <script src="opencv.js"></script> -->
-    <script async src="opencv.js" onload="onOpenCvReady();" type="text/javascript"></script>
+    <!-- <script src="opencv.js" onload="onOpenCvReady();" type="text/javascript"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 
 
