--- a/cubo.html
+++ b/cubo.html
@@ -37,7 +37,7 @@
                     <option value="cian">Cian</option>
                 </select>
                 <button id="videoButton">Seleccionar Video</button>
-                <input type="file" id="videoInput" accept="video/*" style="display:none;"onchange="handleFileSelect(event)">
+                <input type="file" id="videoInput" accept="video/*" style="display:none;"onchange="handleVideoSelect(event)">
             </div>
         </div>
     </div>
