--- a/cubo.html
+++ b/cubo.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cubo con Imágenes</title>
+    <title>Cubo con videos</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <!-- <script src="opencv.js"></script> -->
     <script src="cubo.js"></script>
 </head>
 <style>
@@ -23,9 +24,9 @@
     }
 </style>
 <body>
-    <h1>Cubo con Imágenes</h1>
+    <h1>Cubo con Videos</h1>
     <div class="canvas-container">
-        <canvas id="glcanvas" width="400" height="400"></canvas> 
+        <canvas id="glcanvas" width="400" height="400"></canvas>
         <button id="selectImageButton" style="display:none;">Seleccionar Imagen</button>
     </div>
 </body>
