--- a/cubo.html
+++ b/cubo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cubo con videos</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <!-- <script src="opencv.js"></script> -->
+    <script src="opencv.js"></script>
     <script src="cubo.js"></script>
 </head>
 <style>
@@ -24,7 +24,7 @@
     }
 </style>
 <body>
-    <h1>Cubo con Videos</h1>
+    <h1>Cubo con Video</h1>
     <div class="canvas-container">
         <canvas id="glcanvas" width="400" height="400"></canvas>
         <button id="selectImageButton" style="display:none;">Seleccionar Imagen</button>
